webapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: preveil-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      name: http
